samples/_failures_safe/1761357386_dda6e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3168e7d7.c: In function ‘main’:
./samples/SAFE/__tmp_3168e7d7.c:163:29: error: expected ‘)’ at end of input
  163 |     if (compressed_size == 0
      |        ~                    ^
      |                             )
./samples/SAFE/__tmp_3168e7d7.c:163:5: error: expected declaration or statement at end of input
  163 |     if (compressed_size == 0
      |     ^~
